# Machaira

./: CMakeLists.txt  LICENSE  README.md
Res/: SourceList.txt
Res/.sword/InstallMgr/: InstallMgr.conf  SourceList.txt
Source/: Main.cpp  SwordBackend.cpp  SwordBackend.hpp
